# Data_Extraction

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
Config_files/: config.csv
Data_Extraction/: profiling.py  reading.py  writing.py
Data_Ingestion/: reading.py
Data_files/: MTcars.csv  mock_data.csv
Docs/: README.md
main/: main.py  test.py
source_files/: file_example_XLS_10.xls  test_data.csv
